# openstack-doc-tools

./: .gitignore  .gitreview  .mailmap  .stestr.conf  .zuul.yaml  CONTRIBUTING.rst  HACKING.rst  MANIFEST.in  README.rst  RELEASE_NOTES.rst  bindep.txt  client-requirements.txt  doc-test.conf.sample  generatedocbook  lower-constraints.txt  openstack-common.conf  pyproject.toml  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
autogenerate-config-docs/: README.md  autohelp.py  common.py  extract_swift_flags.py
autogenerate-config-docs/test/: generator.py
autogenerate_config_docs/: README.md  README.rst  __init__.py  autohelp-wrapper  autohelp.ignore  autohelp.py  common.py  diff_branches.py  extract_swift_flags.py  hooks.py  requirements.txt
autogenerate_config_docs/extra_repos/: neutron-master  neutron-master-stackforge  neutron-master.txt
autogenerate_config_docs/releasenotes/notes/: conf-in-manuals-f2d57e04ee35741f.yaml  switch-to-jinja-4b8d143f872a2495.yaml  update-can-create-097dd0790567eeb5.yaml
autogenerate_config_docs/requirements/: cinder-juno.txt  neutron-kilo.txt  neutron-master.txt  neutron.txt
autogenerate_config_docs/templates/: autohelp-category.rst.j2  autohelp-group.rst.j2  autohelp.docbook.j2  autohelp.rst.j2  changes.docbook.j2  changes.rst.j2  swift.docbook.j2  swift.rst.j2
autogenerate_config_docs/test/: genconfs.sh  generator.py
build_environment/: README.md  Vagrantfile  Vagrantfile.box
build_environment/files/: fetch.sh  nginx.default  playbook.yaml
cleanup/: prettify.py  remove_trailing_whitespaces.sh  remove_unnecessary_spaces.py
cleanup/retf/: README.md  retf.py
doc/source/: autogenerate_config_docs.rst  conf.py  index.rst  installation.rst  release_notes.rst  sitemap-readme.rst  usage.rst
doc/source/man/: openstack-doc-test.rst
os_doc_tools/: commands.py  common.py  dn2osdbk.py  doctest.py  handle_pot.py  index.py  jsoncheck.py  version.py
os_doc_tools/openstack/common/: gettextutils.py  importutils.py  jsonutils.py  log.py  strutils.py
os_doc_tools/resources/: README.rst  README.txt  clients.yaml  dn2osdbk.xsl  docbookxi.rng  extensions.rng  rackbook.rng  wadl.rng  wadl.xsd
os_doc_tools/scripts/: build-ha-guide.sh  markdown-docbook.sh  pandoc-template.docbook
os_doc_tools/sphinx/: hotref.py
os_doc_tools/test/: test_index.py  test_jsoncheck.py
releasenotes/notes/: afs-docs-952f940dc7c47408.yaml  autohelp-overrides-b076159cc00891b3.yaml  cli-ref-rst-20365acfdba086f2.yaml  docbook-removal-0c0d6c5a7b73ab77.yaml  docbuild-mitaka-52668f8862e88552.yaml  docs-publishing-8da43343222f613e.yaml  drop-py2-7-c7fce3322cc66380.yaml  fix-langs-tox-c3ead8fa02de31fc.yaml  i18n-bug-report-b1031955789ee343.yaml  indexpage-ed235f8665f398d7.yaml  publish-docs-54aa1604f102cb7c.yaml  remove-docbook-support-from-extract_swift_flags-1bd83bc1b68fe056.yaml  remove-swift-support-54f2d2d9c78cbb58.yaml  rework-install-guide-d50130d9a7189009.yaml  rst-autohelp-5a318c715618b113.yaml  separate-index-cce0ae4286f1da53.yaml  swift-read-rst-409e5d060eb54124.yaml  the-great-doc-tools-cleanup-1a79e2c200232489.yaml  unsupport-osc-cli-ref-191b42b312f1ce89.yaml  virtual-build-6814d919fb4f1861.yaml
releasenotes/source/: conf.py  index.rst  unreleased.rst
sitemap/: README.md  README.rst  requirements.txt  scrapy.cfg  transform-sitemap.xslt
sitemap/generator/: items.py  pipelines.py  settings.py
sitemap/generator/spiders/: sitemap.py  sitemap_file.py
sitemap/test/generator/: test_items.py  test_pipelines.py
sitemap/test/generator/spiders/: test_sitemap_file.py
test/: test_pipelines.py  test_sitemap_file.py
tools/: install_venv.py
