[metadata]
name = openstack-doc-tools
summary = Tools for OpenStack Documentation
description-file =
    README.rst
author = OpenStack Documentation
author-email = openstack-doc@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4

[files]
packages =
    os_doc_tools
    autogenerate_config_docs
data_files =
    share/openstack-doc-tools/sitemap = sitemap/*
    share/openstack-doc-tools/cleanup = cleanup/*
scripts =
    bin/doc-tools-check-languages
    bin/doc-tools-update-cli-reference

[global]
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]
console_scripts =
     openstack-doc-test = os_doc_tools.doctest:doctest
     openstack-autohelp = autogenerate_config_docs.autohelp:main
     openstack-auto-commands = os_doc_tools.commands:main
     openstack-generate-docbook = os_doc_tools.handle_pot:generatedocbook
     openstack-generate-pot = os_doc_tools.handle_pot:generatepot
     openstack-jsoncheck = os_doc_tools.jsoncheck:main
     openstack-dn2osdbk = os_doc_tools.dn2osdbk:main

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[wheel]
universal = 1
