[metadata]
name = openstack-doc-tools
summary = Tools for OpenStack Documentation
description-file =
    README.rst
author = OpenStack Documentation
author-email = openstack-discuss@lists.openstack.org
home-page = https://docs.openstack.org/openstack-doc-tools/latest/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[files]
packages =
    os_doc_tools
data_files =
    share/openstack-doc-tools/sitemap = sitemap/*
scripts =
    bin/doc-tools-check-languages
    bin/doc-tools-build-rst

[global]
setup-hooks =
    pbr.hooks.setup_hook

[wheel]
universal = 1
