[metadata]
name = openstack-doc-tools
summary = Tools for OpenStack Documentation
description-file =
    README.rst
author = OpenStack Documentation
author-email = openstack-discuss@lists.openstack.org
home-page = https://docs.openstack.org/openstack-doc-tools/latest/
python-requires = >=3.8
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[files]
packages =
    os_doc_tools
data_files =
    share/openstack-doc-tools/sitemap = sitemap/*
scripts =
    bin/doc-tools-check-languages
    bin/doc-tools-build-rst
